--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,13 +1,17 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-    background-color: #63a4ff;
-    background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
-	width: 100%;
+    background: url("https://images.pexels.com/photos/4040119/pexels-photo-4040119.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260")
+    no-repeat;
+    background-size: cover;
+	background-attachment: fixed;
 	overflow-x: hidden;
 }
 
@@ -42,6 +46,10 @@ body {
 	max-width: 450px;
 }
 
+.image-box:hover img {
+    transform: scale(1.0);
+}
+
 .text-box {
 	grid-area: text-box;
 	display: flex;
@@ -51,7 +59,21 @@ body {
 }
 
 .card {
-	width: 100%;
+    width: 100%;
+    padding: 6px;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 10px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    color:#fff;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    position:relative;
+    overflow:hidden;
+
 }
 
 .card p {
@@ -65,15 +87,100 @@ body {
 	height: 35px;
 }
 
+.btn {
+    font-weight: bold;
+}
+
+.card:hover .btn {
+    cursor:pointer;
+    transform: scale(1.2);
+    font-weight: bold;
+}
+
+.indexNav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.indexNav ul li {
+    --c: goldenrod;
+    color: var(--c);
+    font-size: 16px;
+    border: 0.3em solid var(--c);
+    border-radius: 0.5em;
+    width: 12em;
+    height: 3em;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: 0.5s;
+    margin: 1em;
+}
+
+.indexNav ul li span {
+    position: absolute;
+    width: 25%;
+    height: 100%;
+    background-color: var(--c);
+    transform: translateY(150%);
+    border-radius: 50%;
+    left: calc((var(--n) - 1) * 25%);
+    transition: 0.5s;
+    transition-delay: calc((var(--n) - 1) * 0.1s);
+    z-index: -1;
+}
+
+.indexNav ul li:hover {
+    color: black;
+}
+
+.indexNav ul li:hover span {
+    transform: translateY(0) scale(2);
+}
+
+.indexNav ul li span:nth-child(1) {
+    --n: 1;
+}
+
+.indexNav ul li span:nth-child(2) {
+    --n: 2;
+}
+
+.indexNav ul li span:nth-child(3) {
+    --n: 3;
+}
+
+.indexNav ul li span:nth-child(4) {
+    --n: 4;
+}
+
+#submit {
+ color: #fff;
+ font-size: 20px;
+ font-weight: bold;
+ letter-spacing: 0.1em;
+ text-align: center;
+ width: 135px;
+ height: 38px;
+ border: none;
+ margin: 0;
+ padding: 0;
+ background: none;
+}
+
+#submit:hover {
+    color: black;
+}
+
 .warning {
 	position: relative;
 	margin-top: -37px;
 }
 
-footer {
-    bottom: 0;
-    width: 100%;
-	height: 80px;
-	text-align: center;
-	line-height: 80px;
-}
+
+
