--- a/src/main/resources/static/css/result.css
+++ b/src/main/resources/static/css/result.css
@@ -1,12 +1,13 @@
-* {
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+*
+{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
 body {
-    background-color: #ffffff;
-    background-image: linear-gradient(315deg, #ffffff 0%, #91a6ff 74%);
 	width: 100%;
 	overflow-x: hidden;
 }
@@ -34,10 +35,4 @@ img {
 
 .card button {
 	width: 45%;
-}
-
-footer {
-	height: 80px;
-	text-align: center;
-	line-height: 80px;
 }
