--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/css/index.css}">
@@ -12,22 +13,39 @@
 </head>
 <body>
 
+<!-- Importing NavBar -->
+<div th:insert="navbar.html :: navbar"></div>
+
 <!-- Main Container Start -->
 <div class="main-container container py-5 px-4 gradient">
-<!--  <div class="image-box">-->
-<!--&lt;!&ndash;    <img th:src="@{/images/bluemug.png}" alt="image">&ndash;&gt;-->
-<!--  </div>-->
+
+  <div class="image-box">
+    <img th:src="@{/images/check.png}" alt="image">
+  </div>
+
   <div class="text-box">
     <h1 class="mb-5 text-center">Do you know Java?</h1>
-    <form class="card bg-dark py-5 px-4" action="/quiz" method="POST">
+    <form class="card py-5 px-4" action="/quiz" method="POST">
       <p>Enter your name</p>
       <input type="text" name="username" />
       <p class="text-danger warning" th:if="${warning}" th:text="${warning}"></p>
-      <button type="submit" class="btn btn-warning">Start quiz</button>
+
+      <nav class="indexNav">
+        <ul>
+          <li>
+            <button type="submit" id="submit">
+            START
+            <span></span><span></span><span></span><span></span>
+            </button>
+          </li>
+        </ul>
+      </nav>
+
     </form>
   </div>
 </div>
 
-
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
