--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" th:href="@{/css/quiz.css}">
+  <title>Marshmallow Quiz</title>
 </head>
+
 <body>
-$END$
+
+<!-- Importing NavBar -->
+<div th:insert="navbar.html :: navbar"></div>
+
+<div class="container py-5 px-4">
+  <h1 class="bg-warning text-dark">Select correct answers</h1>
+
+  <form action="submit" method="POST" th:object=${qForm}>
+    <div class="ques-box bg-dark text-light" th:each="ques, i: ${qForm.questions}">
+      <p class="title" th:text="${ques.title}"></p>
+
+      <div class="option">
+        <input type="radio" th:name="|questions[${i.index}].choice|" th:value="1" />
+        <p th:text="${ques.optionA}"></p>
+      </div>
+
+      <div class="option">
+        <input type="radio" th:name="|questions[${i.index}].choice|" th:value="2" />
+        <p th:text="${ques.optionB}"></p>
+      </div>
+
+      <div class="option">
+        <input type="radio" th:name="|questions[${i.index}].choice|" th:value="3" />
+        <p th:text="${ques.optionC}"></p>
+      </div>
+
+      <input type="hidden" th:name="|questions[${i.index}].quesId|" th:value="${ques.quesId}" />
+      <input type="hidden" th:name="|questions[${i.index}].title|" th:value="${ques.title}" />
+      <input type="hidden" th:name="|questions[${i.index}].answer|" th:value="${ques.answer}" />
+    </div>
+
+    <button type="submit" class="btn btn-success d-block mx-auto mt-4">Submit Answer</button>
+  </form>
+</div>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
