--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" th:href="@{/css/result.css}">
@@ -12,18 +13,18 @@
 </head>
 <body>
 
-	<!-- Importing NavBar -->
-	<div th:insert="navbar.html :: navbar"></div>
+<!-- Importing NavBar -->
+<div th:insert="navbar.html :: navbar"></div>
 	
 	<!-- Main Container Start -->
 	<div class="main-container container py-5 px-4">
 		<div class="card bg-dark text-light py-5 px-4 mx-auto">
-			<img th:src="@{/images/cat.png}" alt="image">
+			<img th:src="@{/images/catty.png}" alt="image">
 			
 			<h3 class="bg-success text-center mb-5 p-2">Your Score</h3>
 			
 			<div class="d-flex justify-content-center">
-				<p>Participant name:&nbsp;&nbsp;</p>
+				<p>Your name:&nbsp;&nbsp;</p>
 				<p th:if="${result}" th:text="${result.username}"></p>
 			</div>
 			
@@ -33,23 +34,23 @@
 			</div>
 			
 			<div class="d-flex justify-content-center">
-				<p>Total incorrect answers:&nbsp;&nbsp;</p>
-				<p th:if="${result}" th:text="5 - ${result.totalCorrect}"></p>
+				<p th:if="${result}" th:text="${result.percent} + '%'"></p>
 			</div>
-			
+
+			<div class="d-flex justify-content-center">
+				<p class="text-success fw-bolder fs-3" th:text="${message}"></p>
+			</div>
+
 			<div class="d-flex justify-content-center mt-4">
 				<button type="button" th:onclick="window.location.href='/score'"
-					class="btn btn-outline-warning mx-auto">View Scores</button>
+					class="btn btn-outline-warning mx-auto">View scores</button>
 				<button type="button" th:onclick="window.location.href='/'"
-					class="btn btn-outline-warning mx-auto">Back to Homepage</button>
+					class="btn btn-outline-warning mx-auto">Back to homepage</button>
 			</div>
 		</div>
 	</div>
 	
-	<!-- Importing Footer -->
-	<div th:insert="footer.html :: footer"></div>
-	
-	<!-- Bootstrap JS -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
