--- a/src/main/resources/templates/scoreboard.html
+++ b/src/main/resources/templates/scoreboard.html
@@ -12,29 +12,28 @@
 </head>
 <body>
 
-	<!-- Importing NavBar -->
-	<div th:insert="navbar.html :: navbar"></div>
+<!-- Importing NavBar -->
+<div th:insert="navbar.html :: navbar"></div>
 	
 	<!-- Main Container Start -->
 	<div class="main-container container py-5 px-4">
 		<h3 class="bg-warning text-center mb-5 p-2">Top Scores</h3>
 		
-		<table class="bg-dark text-light">
+		<table class="table table-hover table-dark">
 			<tr>
+				<th>#</th>
 				<th>Name</th>
 				<th>Score</th>
 			</tr>
 			<tr th:each="score : ${sList}">
+				<td th:text="${score.id}"></td>
 				<td th:text="${score.username}"></td>
 				<td th:text="${score.totalCorrect}"></td>
 			</tr>
 		</table>
 	</div>
-	
-	<!-- Importing Footer -->
-	<div th:insert="footer.html :: footer"></div>
-	
-	<!-- Bootstrap JS -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
