--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+	  xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head th:fragment="headerfiles">
 	<meta charset="ISO-8859-1">
 	<!-- Bootstrap CSS -->
@@ -12,6 +13,7 @@
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar">
 	  <div class="container-fluid">
 	    <a class="navbar-brand" href="/">Java Quiz</a>
+
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 				aria-expanded="false" aria-label="Toggle navigation">
@@ -21,13 +23,29 @@
 	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 	        <li class="nav-item">
-	          <a class="nav-link fs-5" href="/">Home</a>
+	          <a class="nav-link fs-6" href="/">Home</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link fs-5" href="/score">Scores</a>
+	          <a class="nav-link fs-6" href="/score">Scores</a>
 	        </li>
+			  <li class="nav-item" sec:authorize="!isAuthenticated()">
+				  <a class="nav-link fs-6" th:href="@{/register}">Register</a>
+			  </li>
+			  <li class="nav-item" sec:authorize="!isAuthenticated()">
+				  <a class="nav-link fs-6" th:href="@{/login}">Login</a>
+			  </li>
+			  <li class="nav-item" sec:authorize="isAuthenticated()">
+				  <a class="nav-link text-info" th:inline="text">[[${#httpServletRequest.remoteUser}]]</a>
+			  </li>
 	       </ul>
-	    </div>
+
+			<div sec:authorize="isAuthenticated()">
+				<form th:action="@{/doLogout}" method="post">
+					<button type="submit" class="btn btn-outline-info m-2">Logout</button>
+				</form>
+			</div>
+
+		</div>
 	  </div>
 	</nav>
 	<!-- Navbar End -->
