--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta charset="ISO-8859-1">
+  <title>Registration success</title>
+  <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
-$END$
+<div class="container text-center">
+  <h3>You have signed up successfully!</h3>
+  <h4><a th:href="@{/login}">Click here to log in</a></h4>
+  <h4><a th:href="@{/}">Return to the homepage</a></h4>
+</div>
+
 </body>
 </html>
