--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Login Form</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" th:href="@{/css/login.css}">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 </head>
 <body>
-$END$
+<div class="background-image"></div>
+<div class="container">
+  <div class="row px-3">
+    <div class="col-lg-10 col-xl-9 card flex-row mx-auto px-0">
+      <div class="img-left d-none d-md-flex"></div>
+
+      <div class="card-body">
+        <h4 class="title text-center mt-4">
+          Sign up
+        </h4>
+        <form class="form-box px-3" th:action="@{/process_register}" th:object="${user}" method="post">
+
+          <div class="form-input">
+            <span><i class="fa fa-envelope-o"></i></span>
+            <input type="email" th:field="*{email}" class="form-control" placeholder="Email" tabindex="10" required />
+          </div>
+
+          <div class="form-input">
+            <span><i class="fa fa-key"></i></span>
+            <input type="password" th:field="*{password}" class="form-control" placeholder="Password" required minlength="6" maxlength="10"/>
+          </div>
+
+          <div class="form-input">
+            <span><i class="fa fa-key"></i></span>
+            <input type="text" th:field="*{firstName}" class="form-control" placeholder="First name" required minlength="2" maxlength="20"/>
+          </div>
+
+          <div class="form-input">
+            <span><i class="fa fa-key"></i></span>
+          <input type="text" th:field="*{lastName}" class="form-control" placeholder="Last name" required minlength="2" maxlength="20" />
+          </div>
+
+          <div class="mb-3">
+            <button type="submit" class="btn btn-block text-uppercase">
+              Register
+            </button>
+          </div>
+
+          <hr class="my-4">
+
+          <div class="text-center mb-2">
+            Already a member?
+            <a href="/login" class="register-link">
+              Log in!
+            </a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
