--- a/src/main/resources/templates/userPanel.html
+++ b/src/main/resources/templates/userPanel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>User panel</title>
 </head>
 <body>
-$END$
+
 </body>
 </html>
