--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 <div class="main-container container py-5 px-4 gradient">
 
   <div class="image-box">
-    <img th:src="@{/images/check.png}" alt="image">
+    <img th:src="@{/images/girl.png}" alt="image">
   </div>
 
   <div class="text-box">
