--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -25,6 +25,9 @@
 	        <li class="nav-item">
 	          <a class="nav-link fs-6" href="/">Home</a>
 	        </li>
+			  <li class="nav-item" sec:authorize="isAuthenticated()">
+				  <a class="nav-link fs-6" th:href="@{/newQuestionForm}">Add your question!</a>
+			  </li>
 	        <li class="nav-item">
 	          <a class="nav-link fs-6" href="/score">Scores</a>
 	        </li>
