--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
 
                     <div class="text-center mb-2">
                         Don't have an account?
-                        <a href="#" class="register-link">
+                        <a href="/register" class="register-link">
                             Register here!
                         </a>
                     </div>
