--- a/src/main/resources/templates/new_question.html
+++ b/src/main/resources/templates/new_question.html
@@ -3,25 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>User panel</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
+<div class="background-image"></div>
+ <div class="container">
+        <div class="row px-3">
 
-<h1>Add new question:</h1>
+            <div class="col-lg-10 col-xl-9 card flex-row mx-auto px-0">
+                <div class="img-left-2 d-none d-md-flex"></div>
+                <div class="card-body">
 
-<form action="#" th:action="@{/saveQuestion}" th:object="${question}" method="POST">
-    <input type="text" th:field="*{title}" placeholder="Your question: " class="form-control mb-4 col-4">
+                    <div th:if="${message}" class="alert alert-success text-center">[[${message}]]</div>
+                    <div th:if="${messageErr}" class="alert alert-danger text-center">[[${messageErr}]]</div>
 
-    <input type="text" th:field="*{optionA}" placeholder="Option A: " class="form-control mb-4 col-4">
+                    <h2>Add new question:</h2>
 
-    <input type="text" th:field="*{optionB}" placeholder="Option B: " class="form-control mb-4 col-4">
+                    <form action="#" th:action="@{/saveQuestion}" th:object="${question}" method="POST">
 
-    <input type="text" th:field="*{optionC}" placeholder="Option C: " class="form-control mb-4 col-4">
+                        <div class="mb-3">
+                            <label class="form-label">Your question: </label>
+                            <input type="text"
+                                   th:field="*{title}" id="title" class="form-control" aria-describedby="questionHelp">
+                            <div id="questionHelp" class="form-text">
+                                Tip: Your question should be short (make it possibly most understandable).
+                                Give 3 answers below: 2 incorrect and one which is correct.
+                            </div>
+                        </div>
 
-    <input type="text" th:field="*{answer}" placeholder="Correct answer: " class="form-control mb-4 col-4">
+                        <div class="mb-3">
+                            <label class="form-label">Answer 1: </label>
+                            <input type="text" th:field="*{optionA}" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Answer 2: </label>
+                            <input type="text" th:field="*{optionB}" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Answer 3: </label>
+                            <input type="text" th:field="*{optionC}" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Correct answer's number (only 1 or 2 or 3): </label>
+                            <input type="text" th:field="*{answer}" class="form-control">
+                        </div>
 
-    <button type="submit" class="btn btn-info col-2">Save your question</button>
-</form>
-
-
+                        <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Save your question</button>
+                        <hr class="my-4">
+                        <a href="/" class="link">Go back to home page</a>
+                        </div>
+                    </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
