--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -19,7 +19,7 @@
 	<!-- Main Container Start -->
 	<div class="main-container container py-5 px-4">
 		<div class="card bg-dark text-light py-5 px-4 mx-auto">
-			<img th:src="@{/images/catty.png}" alt="image">
+			<img th:src="@{/images/girlDesk.png}" alt="image">
 			
 			<h3 class="bg-success text-center mb-5 p-2">Your Score</h3>
 			
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 	</div>
-	
+<a href='https://www.freepik.com/psd/3d-woman'>Designed by Freepik</a>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
