--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -33,12 +33,12 @@
           </div>
 
           <div class="form-input">
-            <span><i class="fa fa-key"></i></span>
+            <span><i class="fa fa-user"></i></span>
             <input type="text" th:field="*{firstName}" class="form-control" placeholder="First name" required minlength="2" maxlength="20"/>
           </div>
 
           <div class="form-input">
-            <span><i class="fa fa-key"></i></span>
+            <span><i class="fa fa-user"></i></span>
           <input type="text" th:field="*{lastName}" class="form-control" placeholder="Last name" required minlength="2" maxlength="20" />
           </div>
 
