--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -56,6 +56,11 @@
               Log in!
             </a>
           </div>
+          <div class="text-center mb-2">
+            <a href="/" class="home-link">
+              Back to home page
+            </a>
+          </div>
         </form>
       </div>
     </div>
