--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,9 @@
     </form>
   </div>
 </div>
+<div id="lowerleft">
 <a href='https://www.freepik.com/psd/3d-woman'>Designed by Freepik</a>
+</div>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
