--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -55,7 +55,7 @@
                         </div>
 
                         <div class="col-4">
-                            <a href="#" class="btn btn-block btn-social btn-google">
+                            <a href="/@{/oauth2/authorization/google}" class="btn btn-block btn-social btn-google">
                                 google
                             </a>
                         </div>
@@ -73,6 +73,11 @@
                         Don't have an account?
                         <a href="/register" class="register-link">
                             Register here!
+                        </a>
+                    </div>
+                    <div class="text-center mb-2">
+                        <a href="/" class="home-link">
+                            Back to home page
                         </a>
                     </div>
                 </form>
