--- a/src/main/resources/templates/new_question.html
+++ b/src/main/resources/templates/new_question.html
@@ -53,7 +53,7 @@
                         <div class="text-center">
                         <button type="submit" class="btn btn-primary">Save your question</button>
                         <hr class="my-4">
-                        <a href="/" class="link">Go back to home page</a>
+                        <a href="/" class="home-link">Go back to home page</a>
                         </div>
                     </form>
             </div>
