Change social media buttons style to disabled buttons

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,21 +49,24 @@
 
                     <div class="row mb-3">
                         <div class="col-4">
-                            <a href="#" class="btn btn-block btn-social btn-facebook">
+                            <button type="button" class="btn btn-block btn-social btn-facebook"
+                                    disabled data-bs-toggle="button" autocomplete="off">
                                 facebook
-                            </a>
+                            </button>
                         </div>
 
                         <div class="col-4">
-                            <a href="/@{/oauth2/authorization/google}" class="btn btn-block btn-social btn-google">
+                            <button type="button" class="btn btn-block btn-social btn-google"
+                                    disabled data-bs-toggle="button" autocomplete="off">
                                 google
-                            </a>
+                            </button>
                         </div>
 
                         <div class="col-4">
-                            <a href="#" class="btn btn-block btn-social btn-twitter">
+                            <button type="button" class="btn btn-block btn-social btn-twitter"
+                                    disabled data-bs-toggle="button" autocomplete="off">
                                 twitter
-                            </a>
+                            </button>
                         </div>
                     </div>
 
